// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incrementComments ignores non existing posts 1`] = `
Array [
  Array [
    "call",
    "fetch",
    Array [
      "/posts/123",
    ],
  ],
]
`;

exports[`incrementComments increments existing posts 1`] = `
Array [
  Array [
    "call",
    "fetch",
    Array [
      "/posts/123",
    ],
  ],
  Array [
    "call",
    "log",
    Array [
      "comment.inc",
      123,
    ],
  ],
  Array [
    "call",
    "save",
    Array [
      Object {
        "comments": 2,
      },
    ],
  ],
]
`;

exports[`recipe catches a falling toast 1`] = `
Array [
  Array [
    "call",
    "getBread",
    Array [],
  ],
  Array [
    "call",
    "getButter",
    Array [],
  ],
  Array [
    "call",
    "mix",
    Array [
      "getButter",
      "getBread",
    ],
  ],
  Array [
    "call",
    "throw",
    Array [
      "on the floor",
    ],
  ],
]
`;

exports[`recipe goes well 1`] = `
Array [
  Array [
    "call",
    "getBread",
    Array [],
  ],
  Array [
    "call",
    "getButter",
    Array [],
  ],
  Array [
    "call",
    "mix",
    Array [
      "getButter",
      "getBread",
    ],
  ],
  Array [
    "call",
    "return",
    Array [
      Array [
        "getButter",
        "getBread",
      ],
    ],
  ],
]
`;
